--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -546,7 +546,7 @@ ul{
 	</style>
 </noscript>
 
-<link rel="icon" href="https://cdn.jsdelivr.net/gh/RaSan147/py_httpserver_Ult@main/assets/favicon.png?raw=true" type="image/png">
+<link rel="icon" href="https://cdn.jsdelivr.net/gh/RaSan147/pyrobox@main/assets/favicon.png" type="image/png">
 
 
 
